Fix Issue #4 File picker is broken on mobile

--- a/less/moodle/filemanager-2.5.less
+++ b/less/moodle/filemanager-2.5.less
@@ -1173,7 +1173,7 @@ body.moodle26prior {
     
     //Fix file picker on mobile (https://github.com/eduramiba/moodle-theme-uikit/issues/4)
     @media all and (max-width: 872px){
-        .file-picker .fp-repo-area, body.moodle26plus .file-picker .fp-repo-items {
+        .file-picker .fp-repo-area, .file-picker .fp-repo-items {
             width:100%;
         }
         
