--- a/style/themeuikit.css
+++ b/style/themeuikit.css
@@ -16501,7 +16501,7 @@ body.moodle26prior .dir-rtl .filepicker .yui-layout-unit-center {
 }
 @media all and (max-width: 872px) {
   body.moodle26prior .file-picker .fp-repo-area,
-  body.moodle26prior body.moodle26plus .file-picker .fp-repo-items {
+  body.moodle26prior .file-picker .fp-repo-items {
     width: 100%;
   }
   body.moodle26prior .file-picker .fp-repo-area {
